--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "watch": "vite build --watch"
     },
     "devDependencies": {
         "autoprefixer": "^10.4.16",
@@ -14,6 +15,7 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
-        "dropzone": "^6.0.0-beta.2"
+        "dropzone": "^6.0.0-beta.2",
+        "laravel-mix": "^6.0.49"
     }
 }
